--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1> Hello World</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block head %}
+    <title>Homepage</title>
+{% endblock %}
+
+{% block body %}
+    <h1>This is the home page</h1>
+{% endblock %}
